<resources>
    <string name="app_name">Cloud Signer</string>
    <string name="authorize">Authorize</string>
    <string name="mobile_remote_signer_v_1_0">Mobile Remote Signer V 1.0</string>
    <string name="view_pdf">View PDF</string>
    <string name="sign_document">Sign Document</string>
    <string name="select_certificate">Select Certificate</string>
    <string name="get_certificates_list">Get Certificates List</string>
    <string name="prepare_certificates">Prepare Certificates</string>
    <string name="set_certificates_list">Set Certificates List</string>
    <string name="get_sad">Get Sad</string>
    <string name="send_otp">Send OTP</string>
    <string name="get_certificates">Get Certificates</string>
    <string name="load_info">Load info</string>
    <string name="sign_password">Sign Password</string>
    <string name="sign">Sign</string>
    <string name="view_signatures">View Signatures</string>
    <string name="enter_tan">Enter TAN</string>
    <string name="show_password">Show Password</string>
    <string name="close">Close</string>
    <string name="set_certificate_as_default">Default</string>
    <string name="select_crt">Select certificate</string>
    <string name="set_default">Save</string>
    <string name="configuration">Configuration</string>
    <string name="cancel">Cancel</string>
    <string name="copyright">Paul Danut Urian @2019</string>
</resources>
