<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ConfigurationActivity">

    <TextView
        android:id="@+id/select_crt"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/select_crt"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/select"
        android:text="@string/select_crt"
        android:textStyle="bold"
        />

    <Spinner
        android:id="@+id/certList11"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:hapticFeedbackEnabled="true"
        android:background="@drawable/gradient_color"
        style="@android:style/Widget.Spinner" />

    <TextView
        android:id="@+id/set_default"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignTop="@id/certList11"
        android:layout_marginTop="150sp"
        android:layout_marginStart="120sp"
        android:textSize="20sp"
        android:drawableStart="@drawable/def_certificate"
        android:textColor="@color/colorWhite"
        android:text="@string/set_certificate_as_default"
        android:textStyle="bold"
        />
    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/certList11"
        android:layout_marginTop="150sp"
        android:layout_marginStart="240sp"
        />
    <Button
        android:id="@+id/setDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350sp"
        android:layout_marginStart="50sp"
        android:text="@string/set_default"
        android:layout_centerHorizontal="false"
        android:textAlignment="center"
        android:textColor="#EDEDED"
        android:shadowDy="-10"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:drawableEnd="@drawable/save_1"
        android:shadowDx="10"
        android:background="@drawable/configuration_buttons"
        android:textSize="15sp"
        android:onClick="setAsDefault"
        />
    <Button
        android:id="@+id/cancelDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350sp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="#EDEDED"
        android:textSize="15sp"
        android:shadowDy="-10"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:background="@drawable/configuration_buttons"
        android:drawableEnd="@drawable/cancel_1"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="225sp"
        android:onClick="cancelDefCertificate"
        />
    <TextView
        android:id="@+id/time"
        android:layout_width="311dp"
        android:layout_height="67dp"
        android:drawableBottom="@drawable/calendar"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:layout_marginTop="550sp"
        android:layout_marginBottom="10dp"
      />

    <TextView
        android:id="@+id/copyright"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignTop="@id/certList11"
        android:layout_marginTop="550sp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:drawableEnd="@drawable/copyright"
        android:textColor="@color/colorGray"
        android:text="@string/copyright"
        android:textStyle="italic"
        />

</RelativeLayout>